// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Capital letters in story names converted into delimiters 1`] = `
"
import { lazy, createElement, Fragment } from \\"react\\";
import composeEnhancers from \\"/src/compose-enhancers\\";

const capitalization$$blue$tiny$cat = lazy(() => import(\\"/../../tests/fixtures/capitalization.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"BlueTinyCat\\")
  };
}));
const capitalization$$big$barking$dog = lazy(() => import(\\"/../../tests/fixtures/capitalization.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"BigBarkingDog\\")
  };
}));
export let stories = {
  \\"capitalization--blue-tiny-cat\\": {
    component: capitalization$$blue$tiny$cat,
    locStart: 3,
    locEnd: 5,
    entry: \\"tests/fixtures/capitalization.stories.tsx\\"
  },
  \\"capitalization--big-barking-dog\\": {
    component: capitalization$$big$barking$dog,
    locStart: 7,
    locEnd: 9,
    entry: \\"tests/fixtures/capitalization.stories.tsx\\"
  }
};
export let config = {};

export const Provider = ({children}) => /*#__PURE__*/createElement(Fragment, null, children);

let fileSourceCodes = {
  \\"bcf1fa0f\\": \`import * as React from \\"react\\";

export const BlueTinyCat = () => {
  return <h1>Blue Tiny Cat</h1>;
};

export const BigBarkingDog = () => {
  return <h1> Big Barking Dog</h1>;
};
\`
};
export let storySource = {
  \\"capitalization--blue-tiny-cat\\": fileSourceCodes[\\"bcf1fa0f\\"],
  \\"capitalization--big-barking-dog\\": fileSourceCodes[\\"bcf1fa0f\\"]
};

export const errorMessage = '';

"
`;

exports[`Capital letters in the filename converted into delimiters 1`] = `
"
import { lazy, createElement, Fragment } from \\"react\\";
import composeEnhancers from \\"/src/compose-enhancers\\";

const filename$capitalization$$test = lazy(() => import(\\"/../../tests/fixtures/filenameCapitalization.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Test\\")
  };
}));
export let stories = {
  \\"filename-capitalization--test\\": {
    component: filename$capitalization$$test,
    locStart: 3,
    locEnd: 5,
    entry: \\"tests/fixtures/filenameCapitalization.stories.tsx\\"
  }
};
export let config = {};

export const Provider = ({children}) => /*#__PURE__*/createElement(Fragment, null, children);

let fileSourceCodes = {
  \\"445f0671\\": \`import * as React from \\"react\\";

export const Test = () => {
  return <h1>Test</h1>;
};
\`
};
export let storySource = {
  \\"filename-capitalization--test\\": fileSourceCodes[\\"445f0671\\"]
};

export const errorMessage = '';

"
`;

exports[`Default title is used instead of the file name 1`] = `
"
import { lazy, createElement, Fragment } from \\"react\\";
import composeEnhancers from \\"/src/compose-enhancers\\";

const title$$cat = lazy(() => import(\\"/../../tests/fixtures/default-title.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Cat\\")
  };
}));
export let stories = {
  \\"title--cat\\": {
    component: title$$cat,
    locStart: 7,
    locEnd: 9,
    entry: \\"tests/fixtures/default-title.stories.tsx\\"
  }
};
export let config = {};

export const Provider = ({children}) => /*#__PURE__*/createElement(Fragment, null, children);

let fileSourceCodes = {
  \\"0dc60faf\\": \`import * as React from \\"react\\";

export default {
  title: \\"Title\\",
};

export const Cat = () => {
  return <h1>Cat</h1>;
};
\`
};
export let storySource = {
  \\"title--cat\\": fileSourceCodes[\\"0dc60faf\\"]
};

export const errorMessage = '';

"
`;

exports[`Extract and merge story meta 1`] = `
"
import { lazy, createElement, Fragment } from \\"react\\";
import composeEnhancers from \\"/src/compose-enhancers\\";

const title$$cat = lazy(() => import(\\"/../../tests/fixtures/story-meta.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Cat\\")
  };
}));
const title$$dog = lazy(() => import(\\"/../../tests/fixtures/story-meta.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Dog\\")
  };
}));
export let stories = {
  \\"title--cat\\": {
    component: title$$cat,
    locStart: 13,
    locEnd: 15,
    entry: \\"tests/fixtures/story-meta.stories.tsx\\",
    meta: {
      \\"title\\": \\"Title\\",
      \\"meta\\": {
        \\"baseweb\\": {
          \\"theme\\": \\"dark\\",
          \\"browsers\\": [\\"chrome\\", \\"firefox\\"],
          \\"width\\": \\"500px\\"
        },
        \\"links\\": true
      }
    }
  },
  \\"title--dog\\": {
    component: title$$dog,
    locStart: 25,
    locEnd: 27,
    entry: \\"tests/fixtures/story-meta.stories.tsx\\",
    meta: {
      \\"title\\": \\"Title\\",
      \\"meta\\": {
        \\"baseweb\\": {
          \\"theme\\": \\"dark\\",
          \\"browsers\\": [\\"chrome\\", \\"webkit\\"]
        }
      }
    }
  }
};
export let config = {};

export const Provider = ({children}) => /*#__PURE__*/createElement(Fragment, null, children);

let fileSourceCodes = {
  \\"551a9524\\": \`import * as React from \\"react\\";

export default {
  title: \\"Title\\",
  meta: {
    baseweb: {
      theme: \\"dark\\",
      browsers: [\\"chrome\\", \\"webkit\\"],
    },
  },
};

export const Cat = () => {
  return <h1>Cat</h1>;
};

Cat.meta = {
  baseweb: {
    browsers: [\\"chrome\\", \\"firefox\\"],
    width: \\"500px\\",
  },
  links: true,
};

export const Dog = () => {
  return <h1>Dog</h1>;
};
\`
};
export let storySource = {
  \\"title--cat\\": fileSourceCodes[\\"551a9524\\"],
  \\"title--dog\\": fileSourceCodes[\\"551a9524\\"]
};

export const errorMessage = '';

"
`;

exports[`Extract default meta 1`] = `
"
import { lazy, createElement, Fragment } from \\"react\\";
import composeEnhancers from \\"/src/compose-enhancers\\";

const title$$cat = lazy(() => import(\\"/../../tests/fixtures/default-meta.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Cat\\")
  };
}));
export let stories = {
  \\"title--cat\\": {
    component: title$$cat,
    locStart: 12,
    locEnd: 14,
    entry: \\"tests/fixtures/default-meta.stories.tsx\\",
    meta: {
      \\"title\\": \\"Title\\",
      \\"meta\\": {
        \\"baseweb\\": {
          \\"foo\\": \\"title\\"
        }
      }
    }
  }
};
export let config = {};

export const Provider = ({children}) => /*#__PURE__*/createElement(Fragment, null, children);

let fileSourceCodes = {
  \\"6f46f563\\": \`import * as React from \\"react\\";

export default {
  title: \\"Title\\",
  meta: {
    baseweb: {
      foo: \\"title\\",
    },
  },
};

export const Cat = () => {
  return <h1>Cat</h1>;
};
\`
};
export let storySource = {
  \\"title--cat\\": fileSourceCodes[\\"6f46f563\\"]
};

export const errorMessage = '';

"
`;

exports[`Single file with two stories 1`] = `
"
import { lazy, createElement, Fragment } from \\"react\\";
import composeEnhancers from \\"/src/compose-enhancers\\";

const animals$$cat = lazy(() => import(\\"/../../tests/fixtures/animals.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Cat\\")
  };
}));
const animals$$dog = lazy(() => import(\\"/../../tests/fixtures/animals.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Dog\\")
  };
}));
export let stories = {
  \\"animals--cat\\": {
    component: animals$$cat,
    locStart: 3,
    locEnd: 5,
    entry: \\"tests/fixtures/animals.stories.tsx\\"
  },
  \\"animals--dog\\": {
    component: animals$$dog,
    locStart: 7,
    locEnd: 9,
    entry: \\"tests/fixtures/animals.stories.tsx\\"
  }
};
export let config = {};

export const Provider = ({children}) => /*#__PURE__*/createElement(Fragment, null, children);

let fileSourceCodes = {
  \\"29b55362\\": \`import * as React from \\"react\\";

export const Cat = () => {
  return <h1>Cat</h1>;
};

export const Dog = () => {
  return <h1>Dog</h1>;
};
\`
};
export let storySource = {
  \\"animals--cat\\": fileSourceCodes[\\"29b55362\\"],
  \\"animals--dog\\": fileSourceCodes[\\"29b55362\\"]
};

export const errorMessage = '';

"
`;

exports[`Story name replaces named export as a story name 1`] = `
"
import { lazy, createElement, Fragment } from \\"react\\";
import composeEnhancers from \\"/src/compose-enhancers\\";

const storyname$$doggo = lazy(() => import(\\"/../../tests/fixtures/storyname.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Cat\\")
  };
}));
const storyname$$capital$city = lazy(() => import(\\"/../../tests/fixtures/storyname.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"CapitalCity\\")
  };
}));
const storyname$$champs$élysées = lazy(() => import(\\"/../../tests/fixtures/storyname.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"CapitalReplaced\\")
  };
}));
export let stories = {
  \\"storyname--doggo\\": {
    component: storyname$$doggo,
    locStart: 3,
    locEnd: 8,
    entry: \\"tests/fixtures/storyname.stories.tsx\\"
  },
  \\"storyname--capital-city\\": {
    component: storyname$$capital$city,
    locStart: 13,
    locEnd: 15,
    entry: \\"tests/fixtures/storyname.stories.tsx\\"
  },
  \\"storyname--champs-\\\\xE9lys\\\\xE9es\\": {
    component: storyname$$champs$élysées,
    locStart: 17,
    locEnd: 19,
    entry: \\"tests/fixtures/storyname.stories.tsx\\"
  }
};
export let config = {};

export const Provider = ({children}) => /*#__PURE__*/createElement(Fragment, null, children);

let fileSourceCodes = {
  \\"2ab17fea\\": \`import * as React from \\"react\\";

export const Cat = () => {
  const Stop = { storyName: \\"\\" };
  // should be ignored
  Stop.storyName = \\"What\\";
  return <h1>Cat</h1>;
};

Cat.storyName = \\"Doggo\\";
Cat.foo = \\"Ha\\";

export const CapitalCity = () => {
  return <h1>DC</h1>;
};

export const CapitalReplaced = () => {
  return <h1>CapitalReplaced</h1>;
};
CapitalReplaced.storyName = \\"Champs Élysées\\";
\`
};
export let storySource = {
  \\"storyname--doggo\\": fileSourceCodes[\\"2ab17fea\\"],
  \\"storyname--capital-city\\": fileSourceCodes[\\"2ab17fea\\"],
  \\"storyname--champs-\\\\xE9lys\\\\xE9es\\": fileSourceCodes[\\"2ab17fea\\"]
};

export const errorMessage = '';

"
`;

exports[`Turn file name delimiters into spaces and levels correctly 1`] = `
"
import { lazy, createElement, Fragment } from \\"react\\";
import composeEnhancers from \\"/src/compose-enhancers\\";

const our$animals$$mammals$$cat = lazy(() => import(\\"/../../tests/fixtures/our-animals--mammals.stories.tsx\\").then(module => {
  return {
    default: composeEnhancers(module, \\"Cat\\")
  };
}));
export let stories = {
  \\"our-animals--mammals--cat\\": {
    component: our$animals$$mammals$$cat,
    locStart: 3,
    locEnd: 5,
    entry: \\"tests/fixtures/our-animals--mammals.stories.tsx\\"
  }
};
export let config = {};

export const Provider = ({children}) => /*#__PURE__*/createElement(Fragment, null, children);

let fileSourceCodes = {
  \\"347c8ecc\\": \`import * as React from \\"react\\";

export const Cat = () => {
  return <h1>Cat</h1>;
};
\`
};
export let storySource = {
  \\"our-animals--mammals--cat\\": fileSourceCodes[\\"347c8ecc\\"]
};

export const errorMessage = '';

"
`;
